correct alignment

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,9 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 20px;
+  gap: 20px;
 }
 
 .icon {
@@ -33,6 +36,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1 0 auto;
 }
 
 .close-button {
@@ -48,12 +52,14 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  
 }
 
 button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+  margin-left: auto;
 }
 
 button.continue {
@@ -66,4 +72,19 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.right {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  
+}
+
+
+.header {
+  font-weight: bold;
+  display: flex;
+  font-size: large;
+
 }
